<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.famoco.morphodemo.fingerprint.enroll.EnrollFragment">

    <TextView
        android:id="@+id/enroll_home_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:gravity="center"
        android:text="@string/back"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="8dp"
        android:layout_marginStart="4dp"
        android:paddingEnd="16dp"
        tools:ignore="RtlSymmetry,UnusedAttribute"
        app:drawableStartCompat="@drawable/ic_back" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_below="@id/enroll_home_button"
        android:layout_marginTop="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/place_your_finger"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_margin="8dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rest_your_finger_on_the_biometric_module"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_margin="8dp"/>

    <ImageView
        android:id="@+id/finger_enroll_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:background="@drawable/fingerprint_logo_stroke"
        android:contentDescription="@string/IMAGE_DESCRIPTION_FINGER"
        android:layout_margin="16dp"
        android:padding="8dp"/>

    <ProgressBar
        android:id="@+id/sensor_enroll_progress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="8dp"
        android:max="170" />

    <TextView
        android:id="@+id/sensor_enroll_message"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_margin="8dp"
        android:gravity="center"
        android:text="@string/DEFAULT_SENSOR_MESSAGE" />
    </LinearLayout>
</RelativeLayout>
