<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.famoco.morphodemo.initialization.ConnectionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_margin="16dp">

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/famoco_logo"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/IMAGE_DESCRIPTION_FAMOCO_LOGO" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/biometric_fingerprint"
        android:fontFamily="sans-serif"
        android:textStyle="bold"
        android:textSize="28sp"
        android:textColor="@color/colorPrimaryDark"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/by"
            android:fontFamily="sans-serif"
            android:textSize="16sp"
            android:layout_marginEnd="4dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/famoco_txt_logo"
            android:layout_gravity="center"/>

    </LinearLayout>

        <ProgressBar
            android:id="@+id/ConnectionActivityProgressBar"
            style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/ConnectionActivityTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/USER_USB_CONNECTION"
        android:textAlignment="center"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:textSize="12sp"/>
</RelativeLayout>